src/test/deca/context/invalid/homemade/tests/test368_affectation_type_boolean.deca
// test invalide de la règle 3.68


class A{

    boolean = x;
}

